# compareexcel

./: .gitignore  LICENSE  README.md  outfile.txt  pyproject.toml
.github/workflows/: python-publish.yml
src/compareexcel/: __init__.py  cli.py  core.py  report.py
