[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compareexcel"
version = "0.1.8"
description = "Compare two Excel workbooks for column number formats and cell alignment differences, with optional Excel report output."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Excel Compare contributors" }]
keywords = ["excel", "xlsx", "compare", "openpyxl", "pandas"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
]
dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.1",
]

[project.urls]
Repository = "https://github.com/abhidotnet/compareexcel"
Issues = "https://github.com/abhidotnet/compareexcel/issues"

[project.scripts]
compareexcel = "compareexcel.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

